# auto-setup-claude-code

./: .gitignore  CLAUDE.md  README.md  index.html  install-all.command  install.command  package.json  setup.bat  setup.ps1  setup.sh  tailwind.config.js
.github/workflows/: release.yml
scripts/legacy/: install.bat  verify.bat
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: detect.rs  install.rs
src/components/: ProgressBar.tsx  StatusLog.tsx  ToolSelector.tsx
src/hooks/: useInstaller.ts
src/styles/: globals.css
tests/: TEST_CASES.md  test_setup.ps1  test_setup.sh
